# chinese-checkers-cpp

./: CMakeLists.txt  README.md
include/: Board.h  Coordinate.h  Game.h  Movement.h  Player.h  PlayerPositions.h
src/: Board.cpp  Coordinate.cpp  Game.cpp  Movement.cpp  Player.cpp  PlayerPositions.cpp
